app/client/stylesheets/smartervote.import.less
// Slider customisation
@import "slider.import.less";


/*
 * Main app panel that contains all parts
 * covers the full viewport
 */
#smartervote {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  overflow: hidden; // prevent weird scrollbars, but be careful nothing important gets cut off
  
  background: white;
  
  /*
   * Reset bootstrap buttons
   */
  .btn {
    background: transparent;
    border: 0;
    border-radius: 0;
    color: black;
    
    &:focus,
    &:hover,
    &:active {
      outline: 0;
      background: transparent;
      box-shadow: none;
      color: black;
    }
    
    &:hover {
      background: rgba(0, 0, 0, 0.04);
    }
    
    &:focus {
      color: #444;
      text-decoration: underline;
    }
    
    &.active {
      box-shadow: none;
      text-decoration: underline;
    }
  }
}

/*
 * App Logo, menu and language selection
 */
#app-header {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  z-index: 11000;

  padding: 10px;
  
  .site-menu-toggle {
    float: right;
    width: 22px;
    height: 12px;
    margin: 3px 0;
  }
  
  @media only screen and (min-width: @screen-sm-min) {
    left: 0;
    top: 0;
    right: auto;
    
    padding: 1em;
    
    .site-menu-toggle {
      float: none;
      width: 44px;
      height: 24px;
      margin: 0 1em;
    }
  }
}

.languages {
  display: inline-block;
  
  span {
    display: inline-block;
    padding: 0 0.5rem;
  }
}

/*
 * Container to the main svg element
 */
#bubbles-container {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  
  .node {
    opacity: 0.2;
    transition: opacity @transition-duration-dim;
  }
  
  &.dim {
    .node {
      opacity: 1;
    }
  }
  
  @media only screen and (min-width: @screen-sm-min) {
    .node {
      opacity: 1;
    }
  }
}

/*
 * Transition for content dimming effect
 * when slider is dragged in mobile layout
 */
#header,
.answers,
#question-navigation,
.nouislider-label,
#reset {
  transition: opacity @transition-duration-dim, transform @transition-duration-dim;
}

/*
 * Panel for questions and answering
 * positioned on top of bubble network
 */
#content {
  position: absolute;
  z-index: 10000;
  top: 30px;
  bottom: 0;
  left: 10px;
  right: 40px;
  
  min-width: 270px;
  overflow: hidden;
  
  img {
    max-width: 100%;
  }
  
  // Dimming content only on mobile/small
  @media only screen and (max-width: @screen-sm-min) {
    &.dim {
      #header,
      .answers,
      #question-navigation,
      .nouislider-label,
      #reset {
        opacity: 0;
        transform: scale(0.95);
      }
    }
  }
  
  @media only screen and (min-width: @screen-sm-min) {
    top: 0;
    bottom: 0;
    right: 40px;
    left: auto;
    width: 33%;
  }
  
  /*
   * Question index, main text and "more info"
   * ? rename, e.g. #question?
   */
  #header {
    padding-top: 1em;
    
    -webkit-hyphens: auto;
    -moz-hyphens: auto;
    -ms-hyphens: auto;
    hyphens: auto;
    
    .control-label {
      font-size: 1.3em; 
      
      @media only screen and (min-width: @screen-md-min) {
        font-size: 2vw; // of viewport width
      }
    }
    
    .info {
      margin: 15px 0px;
    }
  }
}

/*
 * Contains actual answering controls and question navigation
 * tacked to bottom of #content
 */
.footer {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  padding-top: @controls-vertical-padding-min;
}

/*
 * Answer buttons (yes/no || max/min)
 * ? rename to .answers?
 */
.answers {
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  
  button {
    -webkit-flex: 1 0 50%;
    -ms-flex: 1 0 50%;
    flex: 1 0 50%;
    
    height: @height-answers;
    min-height: 8rem;
    padding: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    
    font-weight: bold;
    font-size: 1em; // of viewport width
    
    &.max {
      text-align: left;
    }
    
    &.min {
      text-align: right;
    }
    
    span {
      display: block;
      overflow: visible;
      overflow: hidden;
      text-overflow: ellipsis;
      
      font-size: 2.5em; // of viewport width
      line-height: 0.9;
      
      text-transform: uppercase;
    }
  }
  
  @media only screen and (min-width: @screen-md-min) {
    button {
      font-size: 2vw; // of viewport width
      
      span {
        font-size: 4vw; // of viewport width
      }
    }
  }
}

#question,
#evaluation {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: auto;
}

/*
 * This is the container generated by the custom scrollbar
 *
 * 1. clone uses relative positioning, so can't use top-bottom absolute positioning
 *    100% would already display scrollbar!
 * 2. might be theme related, check when customising
 * 3. footer/controls height!
 */
.mCSB_container {
  min-height: 99.9%; /* 1 */
  
  #question & {
    padding-bottom: 33rem; /* 3 */
  }
  
  @media only screen and (min-width: @screen-md-min) {
    margin-right: 30px !important; /* 2 */
  }
}

/*
 * Link to the page showing all questions
 */
#show-all-questions {
  float: right;
}

.showInfo,
.hideInfo {
  font-size: 1em;
  
  @media only screen and (min-width: @screen-lg-min) {
    font-size: 1.2vw;
  }
}

/*
 * Generic styles for all control groups
 */
.control-section {
  -webkit-flex-flow: wrap;
  -ms-flex-wrap: wrap;
  flex-flow: wrap;
  
  border-top: @border-default;
  
  &:before,
  &:after {
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    
    height: @controls-vertical-padding-base;
    min-height: @controls-vertical-padding-min;
    
    content: ' ';
  }
}

/*
 * Question navigation
 * i.e. previous/next and go to Score
 */
#question-navigation {
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  
  button {
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
    
    padding: 0;
    
    line-height: @height-question-nav;
    min-height: 4.5rem;
  }
  
  #back,
  #gotoQuestions {
    text-align: left;
  }
  
  #next {
    text-align: right;
  }
  
  #gotoEvaluation {
    -webkit-flex: 1 0 50%;
    -ms-flex: 1 0 50%;
    flex: 1 0 50%;
    
    border: @border-default;
    border-top: 0;
    border-bottom: 0;
    
    font-weight: bold;
    font-size: 1.2em;
  }
}

/*
 * Button for resetting all answers
 */
#reset {
  width: 100%;
  padding: 0;
  
  font-size: 0.9em;
  line-height: @height-reset-button;
  min-height: 3rem;
  
  &:hover {
    color: red !important;
  }
  
  &:after {
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex:  0 0 100%;
    flex: 0 0 100%;
    
    height: @controls-vertical-padding-base;
    min-height: @controls-vertical-padding-min;
    
    content: ' ';
  }
}

/*
 * Score panel
 */
#evaluation {

  .control-section {
    border-top: 0;
  }

}

.final-score,
.sharing,
.topics {
  text-align: center;  
}

.final-score {
  margin-bottom: 2vh;

  span {
    font-weight: bold;
    font-size: 5vw;
  }
}

.sharing {
  background-color: white;
}

.topics {
  .btn {
    .glyphicon {
      //visibility: hidden;
      color: white;
    }
  }
  .active {
    .glyphicon {
      visibility: visible;
      color: black;
    }
  }
}

/*
 * Score gauge on left side of the view
 */
#score-gauge {
  display: none;
  position: absolute;
  top: 50%;
  
  @media only screen and (min-width: @screen-md-min) {
    display: block;
  }
}

